--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="field">
             <label for="confirm_password">Confirm Password</label>
             <input required type="password" id="confirm_password" placeholder=" ">
-            <span class="error_message">* Passwords do not match</span>
+            <span class="error_message">Passwords do not match</span>
           </div>
 
           <div class="buttons">
